<resources>
    <string name="app_name">Pets1</string>

    <!-- Strings related to login -->
    <string name="cvnombre">Nombre</string>
    <string name="imagen_de_pet">Imagen de Pet</string>
    <string name="menuAbout">Acerca de</string>
    <string name="menuContacto">Contacto</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_about">About</string>
    <string name="e_mail">e-mail</string>
    <string name="mensaje">mensaje</string>
    <string name="enviar_comentario">Enviar Comentario</string>
    <string name="Nombre">Nombre</string>
    <string name="TextoDan">Herbert Rodriguez programador Java desde hace ya varios años. Es un apasionado de las nuevas tecnologías: Diseño UX, Python, Ajax, Django o JQuery, Html y bases de datos SQL y SQLite. Constantemente actualizando su formación, actualmente Desarrollador de aplicaciones Android. Puedes contactarle en https://es.linkedin.com/in/android-developer-1010</string>
    <string name="herbert_rodriguez">HERBERT
        RODRIGUEZ</string>
    <string name="Enviar_comentario">Enviar Comentario</string>
    <string name="boton">Boton</string>
    <string name="rating">Rating</string>
    <string name="textview">TextView</string>

</resources>